--- a/index.html
+++ b/index.html
@@ -99,13 +99,19 @@
             <div class="row text-center">
                 <div class="col-lg-12">
                     <h2>Sobre o evento</h2>
-                    <p>A proposta do evento é discutir e divulgar ciência de uma maneira mais descontraída e acessível
-                        ao público.
-                        Os eventos ocorrem em quiosques ou bares para manter a essência de pub, mas ninguém é obrigado a
-                        consumir bebidas.
-                        A principal meta do evento é trazer pessoas envolvidas diretamente com ciência para perto do
-                        público leigo.
-                        O evento não tem qualquer finalidade de trazer lucro aos organizadores.</p>
+                    <p>
+                        Que tal conhecer cientista e descobrir um pouco do que eles fazem enquanto toma uma cerveja no
+                        fim de semana ?<br>
+                        Bem-vindo ao SciencePub! A ideia do evento é discutir e divulgar ciência de uma maneira mais
+                        descontraída e acessível. Afinal, ciência é para todo mundo.
+                        Nossos eventos ocorrem em quiosques ou bares para manter a essência de pub, mas ninguém é
+                        obrigado a consumir bebidas.
+                        A cada edição convidamos cientistas e/ou pessoas do meio científico para trazer a ciência para
+                        mais perto de você, sem custo algum.
+                        Todos as edições são <strong>abertas e gratuitas</strong>. O evento não tem qualquer finalidade
+                        de trazer lucro aos organizadores.<br>
+                        Venha, participe e conheça a iniciativa!
+                    </p>
                 </div>
             </div>
             <div class="row text-center">
@@ -181,7 +187,8 @@
                 <div class="col-lg-6 venue-info venue-slz">
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8">
-                            <h3>São Luís, Maranhão</h3>
+                            <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
+                            <h3>Beer Tap</h3>
                             <p>Cultura cervejeira e 14 torneiras de chopp artesanal</p>
                         </div>
                     </div>
@@ -196,7 +203,8 @@
                 <div class="col-lg-6 venue-info venue-fln">
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8">
-                            <h3>Florianópolis, Santa Catarina</h3>
+                            <h1 style="color: #ffffff;">Florianópolis, Santa Catarina</h1>
+                            <h3>Bendita Gula</h3>
                             <p>Servindo você com amor</p>
                         </div>
                     </div>
