Palestra Marcos Benevides

--- a/index.html
+++ b/index.html
@@ -145,24 +145,18 @@
                     <a class="nav-link" href="#pasteditions" role="tab" data-toggle="tab">Anteriores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#ed-2019" role="tab" data-toggle="tab">2019</a>
+                    <a class="nav-link" href="#ed-2019" role="tab" data-toggle="tab">2019</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#upcoming" role="tab" data-toggle="tab">Próximas</a>
+                    <a class="nav-link active" href="#upcoming" role="tab" data-toggle="tab">Próximas</a>
                 </li>
             </ul>
             <div class="tab-content row justify-content-center">
                 <div role="tabpanel" class="col-lg-9 tab-pane fade" id="pasteditions">
                 </div>
-                <div role="tabpanel" class="col-lg-9 tab-pane fade" id="ed-2016">
+                <div role="tabpanel" class="col-lg-9 tab-pane fade" id="ed-2019">
                 </div>
-                <div role="tabpanel" class="col-lg-9 tab-pane fade" id="ed-2017">
-                </div>
-                <div role="tabpanel" class="col-lg-9 tab-pane fade" id="ed-2018">
-                </div>
-                <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="ed-2019">
-                </div>
-                <div role="tabpanel" class="col-lg-9 tab-pane fade" id="upcoming">
+                <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="upcoming">
                 </div>
             </div>
     </section>
