Notícias sobre o evento

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li><a href="#venue">Local</a></li>
                 <li><a href="#gallery">Galeria</a></li>
                 <li><a href="#supporters">Parceiros</a></li>
+                <li><a href="media.html">Notícias</a></li>
                 <li><a href="#faq">Perguntas frequentes</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
@@ -82,7 +83,7 @@
         </div>
         <h1 class="mb-4 pb-0" style="font-family: 'Aller Display'">Seu pub mensal sobre
             <br><span>ciência e tecnologia</span></h1>
-        <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>10/08</strong> em <strong>Beer
+        <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>14/09</strong> em <strong>Beer
             Tap</strong>, São Luís - Maranhão</h3>
         <a href="https://www.youtube.com/watch?v=pYeqKmb3WLE" class="venobox play-btn mb-4" data-vbtype="video"
            data-autoplay="true"></a>
