--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
-          rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
+        rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,6 +43,13 @@
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-2365499965233952",
+            enable_page_level_ads: true
+        });
+    </script>
 </head>
 
 <body>
@@ -176,8 +184,9 @@
 
             <div class="row no-gutters">
                 <div class="col-lg-6 venue-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 venue-info venue-slz">
                     <div class="row justify-content-center">
@@ -192,8 +201,9 @@
             <br>
             <div class="row no-gutters">
                 <div class="col-lg-6 venue-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.0320312594104!2d-48.52137428553332!3d-27.59253652854299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527385624f6b255%3A0xbcb86064a29cc225!2sRestaurante+Bendita+Gula!5e0!3m2!1spt-BR!2sbr!4v1564606530985!5m2!1spt-BR!2sbr"
-                            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.0320312594104!2d-48.52137428553332!3d-27.59253652854299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527385624f6b255%3A0xbcb86064a29cc225!2sRestaurante+Bendita+Gula!5e0!3m2!1spt-BR!2sbr!4v1564606530985!5m2!1spt-BR!2sbr"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 venue-info venue-fln">
                     <div class="row justify-content-center">
@@ -221,35 +231,35 @@
 
         <div class="owl-carousel gallery-carousel">
             <a href="img/gallery/pic01.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic01.jpg"
-                    alt=""></a>
+                src="img/gallery/pic01.jpg"
+                alt=""></a>
             <a href="img/gallery/pic02.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic02.jpg"
-                    alt=""></a>
+                src="img/gallery/pic02.jpg"
+                alt=""></a>
             <a href="img/gallery/pic03.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic03.jpg"
-                    alt=""></a>
+                src="img/gallery/pic03.jpg"
+                alt=""></a>
             <a href="img/gallery/pic04.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic04.jpg"
-                    alt=""></a>
+                src="img/gallery/pic04.jpg"
+                alt=""></a>
             <a href="img/gallery/pic05.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic05.jpg"
-                    alt=""></a>
+                src="img/gallery/pic05.jpg"
+                alt=""></a>
             <a href="img/gallery/pic06.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic06.jpg"
-                    alt=""></a>
+                src="img/gallery/pic06.jpg"
+                alt=""></a>
             <a href="img/gallery/pic07.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic07.jpg"
-                    alt=""></a>
+                src="img/gallery/pic07.jpg"
+                alt=""></a>
             <a href="img/gallery/pic08.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic08.jpg"
-                    alt=""></a>
+                src="img/gallery/pic08.jpg"
+                alt=""></a>
             <a href="img/gallery/pic09.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic09.jpg"
-                    alt=""></a>
+                src="img/gallery/pic09.jpg"
+                alt=""></a>
             <a href="img/gallery/pic10.jpg" class="venobox" data-gall="gallery-carousel"><img
-                    src="img/gallery/pic10.jpg"
-                    alt=""></a>
+                src="img/gallery/pic10.jpg"
+                alt=""></a>
         </div>
 
     </section>
@@ -372,8 +382,8 @@
                             <div id="faq3" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Fique atento às nossas redes sociais e nosso site. Nos acompanhe pelo <a
-                                        href="https://www.instagram.com/sciencepubbr/" class="txt-link"
-                                        style="display: inline; padding-right: 0;">Instagram</a>,
+                                    href="https://www.instagram.com/sciencepubbr/" class="txt-link"
+                                    style="display: inline; padding-right: 0;">Instagram</a>,
                                     <a href="https://twitter.com/sciencepubbr/" class="txt-link"
                                        style="display: inline; padding-right: 0;">Twitter</a>
                                     e
@@ -456,11 +466,11 @@
                         <a href="https://twitter.com/sciencepubbr" class="twitter"><i class="fa fa-twitter"></i></a>
                         <a href="https://www.facebook.com/sciencepubbr/" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/sciencepubbr/" class="instagram"><i
-                                class="fa fa-instagram"></i></a>
+                            class="fa fa-instagram"></i></a>
                         <a href="https://www.youtube.com/channel/UCYVOOYb5aMCGmwOv6GcyedA" class="youtube"><i
-                                class="fa fa-youtube"></i></a>
+                            class="fa fa-youtube"></i></a>
                         <a href="https://github.com/sciencepub" class="github"><i
-                                class="fa fa-github"></i></a>
+                            class="fa fa-github"></i></a>
                     </div>
                 </div>
             </div>
