--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
     <div class="intro-container wow fadeIn">
         <div id="logo-intro" class="center">
             <!-- Uncomment below if you prefer to use a text logo -->
-            <a href="#intro" class="scrollto"><img src="img/identity/Science-LogoVertical-ComContorno.png" height="300"
+            <a href="#intro" class="scrollto"><img src="img/identity/Science-LogoVertical-ComContorno.png" height="250"
                                                    title=""></a>
         </div>
-        <h1 class="mb-4 pb-0" style="font-family: 'Aller Display'">Seu pub mensal sobre
-            <br><span>ciência e tecnologia</span></h1>
+        <h2 class="mb-4 pb-0" style="/*font-family: 'Aller Display'*/; color: #f6f7fd;"><b>Seu pub mensal sobre <span>ciência e tecnologia!</span></b></h2>
         <h3 style="font-family: 'Aller'; color: #ffffff;">Próxima edição no dia <strong>19/10</strong> em <strong>Beer
             Tap</strong>, São Luís - Maranhão</h3>
-        <a href="https://www.youtube.com/watch?v=pYeqKmb3WLE" class="venobox play-btn mb-4" data-vbtype="video"
+        <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
            data-autoplay="true"></a>
         <a href="#about" class="about-btn scrollto">Descubra mais</a>
     </div>
