Adiçao Black Swan

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <h2>Sobre o evento</h2>
                         <p>
                             Que tal conhecer cientista e descobrir um pouco do que eles fazem enquanto toma uma cerveja
-                            no      
+                            no
                             fim de semana ?<br>
                             Bem-vindo ao SciencePub! A ideia do evento é discutir e divulgar ciência de uma maneira mais
                             descontraída e acessível. Afinal, ciência é para todo mundo.
@@ -197,6 +197,23 @@
                                 <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
                                 <h3>Beer Tap</h3>
                                 <p>Cultura cervejeira e 14 torneiras de chopp artesanal</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row no-gutters">
+                    <div class="col-lg-6 venue-map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.9695192809913!2d-44.247971984631334!3d-2.5168580389177326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f69153be19586d%3A0xe77fd823ad080431!2sEspa%C3%A7o%20Black%20Swan!5e0!3m2!1spt-BR!2sbr!4v1570648870002!5m2!1spt-BR!2sbr"
+                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                    <div class="col-lg-6 venue-info venue-bsw">
+                        <div class="row justify-content-center">
+                            <div class="col-11 col-lg-8">
+                                <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
+                                <h3>Espaço Black Swan</h3>
+                                <p>Maior centro de inovação aberta de iniciativa privada do norte/nordeste</p>
                             </div>
                         </div>
                     </div>
