--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <h1 class="mb-4 pb-0">Seu pub mensal sobre
                 <br><span>ciência e tecnologia</span></h1>
-            <h3 style="color: #ffffff;">Próxima edição em <strong>novembro</strong> no
+            <h3 style="color: #ffffff;">Próxima edição em <strong>10/12</strong> no
                 <strong>Beer Tap</strong>, São Luís - Maranhão</h3>
             <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
