--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
             </div>
             <h1 class="mb-4 pb-0">Seu pub mensal sobre
                 <br><span>ciência e tecnologia</span></h1>
-            <h3 style="color: #ffffff;">Obrigado por um ano incrível!<br> Nos vemos em 2020!</h3>
-            <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
+            <h3 style="color: #ffffff;">Próxima edição em <strong>28/01</strong> no
+                <strong>Beer Tap</strong>, São Luís - Maranhão</h3> <a
+                href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
         </div>
