--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                             A cada edição convidamos cientistas e/ou pessoas do meio científico para trazer a ciência
                             para
                             mais perto de você, sem custo algum.
-                            Todos as edições são <strong>abertas e gratuitas</strong>. O evento não tem qualquer
-                            finalidade
-                            de trazer lucro aos organizadores.<br>
+                            Todos as edições são <strong>abertas e gratuitas</strong>.<br>
                             Venha, participe e conheça a iniciativa!
                         </p>
                     </div>
