Atualização edições de fevereiro

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <h1 class="mb-4 pb-0">Seu pub mensal sobre
                 <br><span>ciência e tecnologia</span></h1>
             <h3 style="color: #ffffff;">Próximas edições<br>
-                <strong>11/02</strong> - <strong>Beer Tap</strong>, São Luís - Maranhão <br>
-                <strong>11/02</strong> - <strong>Lord Beer</strong>, Araranguá - Santa Catarina</h3> <a
+                <strong>07/03</strong> - <strong>Beer Tap</strong>, São Luís - Maranhão <br>
+                <strong>21/03</strong> - <strong>Ritz Restaurante</strong>, Imperatriz - Maranhão</h3> <a
                 href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
@@ -185,12 +185,12 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-3 venue-map">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
                             width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-3 venue-info venue-slz">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-slz">
                         <div class="row justify-content-center">
                             <div class="col-11 col-lg-8">
                                 <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
@@ -199,12 +199,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 venue-map">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3491.6895188105773!2d-49.48344358491045!3d-28.9372664822985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95222f23260ce445%3A0xfb49810027f1829a!2sLord%20Beer!5e0!3m2!1spt-BR!2sbr!4v1580927906384!5m2!1spt-BR!2sbr"
                             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-3 venue-info venue-ara">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-ara">
                         <div class="row justify-content-center">
                             <div class="col-11 col-lg-8">
                                 <h1 style="color: #ffffff;">Araranguá, Santa Catarina</h1>
@@ -216,12 +216,12 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-lg-3 venue-map">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.9695192809913!2d-44.247971984631334!3d-2.5168580389177326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f69153be19586d%3A0xe77fd823ad080431!2sEspa%C3%A7o%20Black%20Swan!5e0!3m2!1spt-BR!2sbr!4v1570648870002!5m2!1spt-BR!2sbr"
                             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
-                    <div class="col-lg-3 venue-info venue-bsw">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-bsw">
                         <div class="row justify-content-center">
                             <div class="col-11 col-lg-8">
                                 <h1 style="color: #ffffff;">São Luís, Maranhão</h1>
@@ -230,12 +230,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 venue-map">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.0320312594104!2d-48.52137428553332!3d-27.59253652854299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527385624f6b255%3A0xbcb86064a29cc225!2sRestaurante+Bendita+Gula!5e0!3m2!1spt-BR!2sbr!4v1564606530985!5m2!1spt-BR!2sbr"
                             width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-3 venue-info venue-fln">
+                    <div class="col-sm-12 col-md-3 col-lg-3 venue-info venue-fln">
                         <div class="row justify-content-center">
                             <div class="col-11 col-lg-8">
                                 <h1 style="color: #ffffff;">Florianópolis, Santa Catarina</h1>
