Atualização palestras de março

--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
             <h1 class="mb-4 pb-0">Seu pub mensal sobre
                 <br><span>ciência e tecnologia</span></h1>
             <h3 style="color: #ffffff;">Próximas edições<br>
-                <strong>07/03</strong> - <strong>Beer Tap</strong>, São Luís - Maranhão <br>
+                <strong>07/03</strong> - <strong>Beer Tap</strong>, São Luís - Maranhão<br>
+                <strong>08/03</strong> - <strong>Lord Beer</strong>, Araranguá - Santa Catarina<br>
                 <strong>21/03</strong> - <strong>Ritz Restaurante</strong>, Imperatriz - Maranhão</h3> <a
-                href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
+                href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-5" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
         </div>
