--- a/index.html
+++ b/index.html
@@ -177,13 +177,29 @@
         <section id="venue" class="wow fadeInUp">
 
             <div class="container-fluid">
-
                 <div class="section-header">
                     <h2>Local</h2>
                     <p>Saiba onde acontece o happy hour científico em sua cidade!</p>
                 </div>
-
-                <div class="row">
+                <div class="row no-gutters">
+                    <div class="col-sm-12 col-md-6 col-lg-6 venue-map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.2457920905676!2d-47.49192368523415!3d-5.5305101959898835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92c55fbaf2883997%3A0xfd004d7504257128!2sRitz%20Restaurante!5e0!3m2!1spt-BR!2sbr!4v1584280199003!5m2!1spt-BR!2sbr"
+                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""
+                            aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 venue-info venue-itz">
+                        <div class="row justify-content-center">
+                            <div class="col-11 col-lg-8">
+                                <h1 style="color: #ffffff;">Imperatriz, Maranhão</h1>
+                                <h3>Ritz Restaurante</h3>
+                                <p>Gastronomia internacional com um tempero brasileiro</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row no-gutters">
                     <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.01234152037!2d-44.31458748524408!3d-2.5028151981762403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68c1c82a4c553%3A0xa120964fddcb6aae!2sBeer+Tap+-+Cultura+Cervejeira!5e0!3m2!1spt-BR!2sbr!4v1564606157365!5m2!1spt-BR!2sbr"
@@ -214,7 +230,7 @@
                     </div>
                 </div>
                 <br>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-sm-12 col-md-3 col-lg-3 venue-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.9695192809913!2d-44.247971984631334!3d-2.5168580389177326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f69153be19586d%3A0xe77fd823ad080431!2sEspa%C3%A7o%20Black%20Swan!5e0!3m2!1spt-BR!2sbr!4v1570648870002!5m2!1spt-BR!2sbr"
