--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
             </div>
             <h1 class="mb-4 pb-0">Seu pub mensal sobre
                 <br><span>ciência e tecnologia</span></h1>
-            <h3 style="color: #ffffff;">Próximas edições<br>
-                <strong>21/03</strong> - <strong>Ritz Restaurante</strong>, Imperatriz - Maranhão</h3> <a
-                href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
+            <h3 style="color: #ffffff;"><a href="2020-covid19.html">Informe sobre a pandemia de COVID-19</a><br></h3>
+                <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
         </div>
