--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
                 <a href="#intro" class="scrollto"><img src="img/identity/SciencePub---Vertical-Contorno-preenchido.png"
                         height="250" title=""></a>
             </div>
-            <h1 class="mb-4 pb-0">Seu pub mensal sobre
-                <br><span>ciência e tecnologia</span></h1>
-            <h3 style="color: #ffffff;"><a href="2020-covid19.html">Informe sobre a pandemia de COVID-19</a><br></h3>
-                <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
+            <h1 class="mb-4 pb-0">Seu pub mensal sobre s<br><span>ciência e tecnologia</span></h1>
+            <h2 style="color: #ffffff;"><a href="2020-covid19.html">Informe sobre a pandemia de COVID-19</a><br></h2>
+            <a href="https://www.youtube.com/watch?v=eAK5UzAOJ60" class="venobox play-btn mb-4" data-vbtype="video"
                 data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">Descubra mais</a>
         </div>
